Bug 875720 - Use baseline to identify arithmetic ops with double specialization instead of looking at TI overflow flag. r=jandem